Fixed some syntax highlighter, comments & scrollbar styling issues

--- a/brianxerri/css/style.css
+++ b/brianxerri/css/style.css
@@ -23,6 +23,7 @@ blockquote {
 }
 ::-webkit-scrollbar {
   width: 7px;
+  height: 7px;
 }
 ::-webkit-scrollbar-track {
   background-color: #1c1c1d;
@@ -291,7 +292,6 @@ ul.slides li {
 }
 .comment-respond{
   margin-top:4em;
-  max-width: 70%;
   margin-left:1em;
 }
 .previous-post{
@@ -697,3 +697,7 @@ span.current{
     float: right;
   }
 }
+
+/*************** Syntax Highlighter ***************/
+.syntaxhighlighter {padding: 20px 0;}
+.syntaxhighlighter .toolbar {display:none;}
